--- a/weblog-master/pom.xml
+++ b/weblog-master/pom.xml
@@ -45,9 +45,12 @@
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-
             <scope>8.0.19</scope>
-
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>1.7.30</version>
         </dependency>
         <!--        commons-codec是Apache开源组织提供的用于摘要运算、编码解码的包。常见的编码解码工具Base64、MD5、Hex、SHA1、DES等。-->
         <dependency>
@@ -106,7 +109,17 @@
             <resource>
                 <directory>src/main/resources</directory>
             </resource>
+            <resource>
+                <!--   描述存放资源的目录，该路径相对POM路径-->
+                <directory>src/main/java</directory>
+                <includes>
+                    <include>**/*.xml</include>
+                </includes>
+            </resource>
+
         </resources>
+
+
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
