--- a/vueblog_web/package.json
+++ b/vueblog_web/package.json
@@ -1,5 +1,5 @@
 {
-   "name": "vueblog_web",
+  "name": "vueblog_web",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -13,6 +13,7 @@
     "element-ui": "^2.4.5",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
+    "vuex": "^3.1.2",
     "wangeditor": "^3.1.1"
   },
   "devDependencies": {
@@ -27,7 +28,12 @@
     "jquery": "^3.4.1",
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
+    "svg-baker-runtime": "^1.4.3",
+    "svg-sprite-loader": "^4.2.1",
+    "svgo": "^1.1.0",
+    "svgo-loader": "^2.1.0",
     "vue-cli-plugin-element": "^1.0.1",
+    "vue-cli-plugin-svg-sprite": "~1.0.0",
     "vue-template-compiler": "^2.6.10"
   }
 }
